--- a/dine-restaurant-website/starter-code/style.css
+++ b/dine-restaurant-website/starter-code/style.css
@@ -17,7 +17,7 @@
 
 .homepage{
     display: inline-flex;
-    height: 100vh;
+     height: 100vh;
 }
 
 .homepage-black{
@@ -104,10 +104,6 @@ width: 450px;
     gap: 100px;
 }
 
-/*.move{
-position: relative;
-right: 930px;
-}*/
 
 .text-h1{
     width: 350px;
@@ -486,7 +482,7 @@ font-family: 'League Spartan', sans-serif;
 font-size: 48px;
 font-style: normal;
 font-weight: 700;
-line-height: 48px; /* 100% */
+line-height: 48px; 
 letter-spacing: -0.5px;
 margin: 90px;
 }
@@ -500,7 +496,7 @@ font-family: 'League Spartan', sans-serif;
 font-size: 17px;
 font-style: normal;
 font-weight: 600;
-line-height: 16px; /* 94.118% */
+line-height: 16px; 
 letter-spacing: 2.5px;
 background: transparent;
 border: 1px solid #FFF;
@@ -816,39 +812,48 @@ button:hover{
 }
 
 .homepage-img-tablet, .locally-sourced-tablet-img,
- .enjoyable-place-tablet-img, .family-gathering-tablet-img, .FAMILY-p-tablet{
+ .enjoyable-place-tablet-img, .family-gathering-tablet-img, 
+ .FAMILY-p-tablet, .homepage-img-mobile, .enjoyable-place-mobile,
+  .locally-sourced-mobile, .salmon-mobile, .beef-mobile, .chocolate-mobile, 
+  .family-gathering-mobile, .mobile-svg{
     display: none;
 }
 
 
 /* media query */
-@media (max-width: 768px){
+@media only screen and (min-width: 768px) and (max-width: 1024px){
+.body{
+    width: 80%;
+    height: 600px;
+    margin: 0 auto;
+}
+    
 
     .contanier{
- width: 768px;
+ width: 760px;
 height: 992px;
 flex-shrink: 0;
     }
 
     .homepage{
         flex-direction: column-reverse;
-
 }
 
-.homepage-img{
+.homepage-img, .homepage-img-mobile, .mobile-svg{
     display: none;
 }
 
 .homepage-img-tablet{
-    display: inline-block;
-    width: 100%;
-height: 804px;
+    display: inline;
+    width: 900px;
+height: 757px;
 flex-shrink: 0;
+z-index: 1;
 }
 
 .homepage-black{
     background-color: black;;
-    width: 1000px;
+    width: 900px;
     position: relative;
     bottom: 200px;
     height: 100vh;
@@ -869,6 +874,11 @@ bottom: 60px;
 padding-left: 270px;
 }
 
+
+.Exquisite{
+    position: relative;
+    right: 50px;
+}
 .Exquisite-h2{
  width: 500px;
 color: #FFF;
@@ -916,7 +926,8 @@ left: 60px;
     margin-left: 140px;
 }
 
-.img1, .img2, .family-gathering-img{
+.img1, .img2, .family-gathering-img, .enjoyable-place-mobile,
+ .locally-sourced-mobile, .salmon-mobile, .beef-mobile, .chocolate-mobile, .family-gathering-mobile{
     display: none;
 }
 
@@ -924,14 +935,14 @@ left: 60px;
     display: inline-block;
     position: relative;
     bottom: 150px;
-    left: 75px;
+    left: 45px;
 }
 
 .locally-sourced-tablet-img{
     display: inline-block;
     margin-bottom: 700px;
     position: relative;
-    bottom: 1400px;
+    bottom: 1350px;
     left: 75px;
 }
 
@@ -1022,13 +1033,13 @@ line-height: 30px; /* 150% */
 .Group12-tablet{
     width: 200px;
    position: relative;
-   right: 600px;
-   bottom: 300px;
+   right: 490px;
+   bottom: 280px;
 }
 
 .line-icon1-tablet{
     position: relative;
-    left: 230px;
+    left: 360px;
     bottom: 80px;
 }
 
@@ -1046,6 +1057,8 @@ line-height: 30px; /* 150% */
 .white-background-flex{
 flex-direction: column;
 }
+
+
 
 
 
@@ -1163,4 +1176,624 @@ bottom: 40px;
     left: 300px;
     bottom: 100px;
 }
+
+
 }
+/* started styling booklin */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+    body{
+        width: 100%;
+        height: 600px;
+        margin: 0 auto;
+    }
+
+    .contanier-booking{
+        width: 780px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 0px 0px / 100% 100% no-repeat;
+    }
+
+    .hero-booking{
+        background-image: url(./images/booking/hero-bg-tablet.jpg);
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 500px;
+        flex-shrink: 0;
+    }
+
+    .reserve{
+        width: 689px;
+        color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 48px;
+font-style: normal;
+font-weight: 300;
+line-height: 64px; /* 133.333% */
+letter-spacing: -0.6px;
+position: relative;
+bottom: 140px;
+right: 35px;
+    }
+
+    .reserve-p{
+        display: flex;
+        width: 573px;
+        color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; /* 150% */
+position: relative;
+bottom: 110px;
+left: 10px;
+
+    }
+
+    .form-container{
+ width: 540px;
+height: 545px;
+flex-shrink: 0;
+background: #FFF;
+box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.50);
+margin-left: 0px;
+position: relative;
+left: 110px;
+top: 200px;
+    }
+
+    .footer-container-booking{
+        width: 100%;
+    }
+    .Group12-booking{
+        display: none;
+    }
+
+
+    .Rectangle-booking{
+        display: none;
+    }
+
+    
+
+    .dine-booking{
+        width: 200px;
+       fill: #FFF;
+       position: relative;
+       top: 50px;
+       left: 30px;
+      }
+
+      .flex-footer-booking{
+        display: block;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+      }
+
+      .footer-container-booking{
+        height: 600px;
+      }
+
+      .black-p1-booking, .black-p2-booking{
+        position: relative;
+        left: 200px;
+      }
+
+      .black-p1-booking{
+        bottom: 40px;
+      }
+      .black-p12-booking{
+        bottom: 20px;
+      }
+}
+
+/* mobile view resturant home page */
+
+  @media only screen and (max-width: 767px) {
+
+.body{
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+}
+
+.contanier{
+    width: 700px;
+    min-height: 100vh;
+    flex-shrink: 0;
+}
+
+.homepage{
+    
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(400px, auto);
+    
+}
+
+.homepage-img-tablet, .homepage-img, .img1, .enjoyable-place-tablet-img, 
+.locally-sourced-tablet-img, .img2, .salmon-desktop, .beef-desktop,
+ .chocolate-desktop-tablet, .family-gathering-tablet-img, .family-gathering-img{
+    display: none;
+}
+
+
+.move-mobile{
+    position: relative;
+    top: 180px;
+    right: 15px;
+}
+
+
+.move-mobile2{
+    position: relative;
+    top: 150px;
+}
+.homepage-img-mobile{
+    display: flex;
+    width: 100%;
+    position: relative;
+    bottom: 30px;
+}
+
+.homepage-black{
+    background-color: black;
+    height: 800px;
+    border: none; 
+    z-index: 1;
+    grid-row: 2;
+ 
+}
+
+
+.dine-logo{
+    width: 103px;
+height: 40px;
+fill: #FFF;
+margin: 50px;
+left: 230px;
+}
+
+.Exquisite-h2{
+width: 200px;
+color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 32px;
+font-style: normal;
+font-weight: 300;
+line-height: 40px;
+letter-spacing: -0.4px;
+left: 230px;
+} 
+
+.Exquisite-p{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
+
+.book-a-table {
+    width: 245px;
+height: 64px;
+flex-shrink: 0;
+border: 1px solid #FFF;
+position: relative;
+top: 40px;
+left: 200px;
+}
+
+.Exquisit{
+   margin-top: 0px;
+}
+
+.flex-image-text{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.enjoyable-place-mobile{
+    display: inline;
+    width: 80%;
+    z-index: 2;
+    position: relative;
+    top: 100px;
+    left: 70px;
+}
+
+.Rectangle{
+   display: none;
+}
+
+
+.locally-sourced-mobile{
+   display: inline;
+   width: 80%;
+   position: relative;
+   bottom: 460px;
+   left: 70px;
+}
+
+.text-h1-mobile-view{
+    margin-top: 200px;
+}
+
+.text-h1{
+    width: 327px;
+    color: #242B37;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: -0.4px;
+position: relative;
+}
+
+.text-p{
+    width: 327px;
+    color: #242B37;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; 
+}
+
+.Enjoyable-locally{
+grid-row: 1;
+}
+
+.mobile-view-text1-div{
+    width: 500px;
+    position: relative;
+    bottom: 250px;
+    left: 70px;
+}
+
+.line-icon1{
+   position: relative;
+   top: 440px;
+   left: 260px;
+}
+
+.line-icon{
+    left: 140px
+}
+
+
+.flex{
+    flex-direction: column;
+
+}
+
+.heighlight{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: -0.4px;
+}
+
+.heighlight-p{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; 
+}
+
+.heighlight, .heighlight-p {
+    position: relative;
+    right: 370px;
+}
+
+.line2{
+
+}
+
+.black-background-container{
+height: 1900px;
+margin-bottom: 100px;
+bottom: 1650px;
+
+}
+
+.inner-flex{
+    display: grid;
+  justify-content: start;
+position: relative;
+right: 280px;
+top: 30px;
+gap: 100px;
+}
+
+.salmon-mobile, .beef-mobile, .chocolate-mobile{
+    display: inline;
+    width: 425px;
+height: 283.536px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 0px 0px / 100% 100% no-repeat;
+}
+
+.line2{
+    position: relative;
+    bottom: 100px;
+    right: 250px;
+    width: 71px;
+height: 7px;
+flex-shrink: 0;
+}
+
+.dish-h1{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: 24px; 
+letter-spacing: -0.25px;
+position: relative;
+bottom: 60px;
+}
+
+.dish-p{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+position: relative;
+bottom: 50px;
+}
+
+.straight-line{
+    bottom: 490px;
+    width: 100%;
+height: 1px;
+flex-shrink: 0;
+opacity: 1.1494;
+background: #FFF;
+position: relative;
+right: 337px;
+}
+
+.straight-line2 {
+    bottom: 490px;
+    height: 1px;
+    flex-shrink: 0;
+    opacity: 1.1494;
+    background: #FFF;
+    position: relative;
+    right: 337px;
+}
+
+.white-background-Rectangle, .Rectangle1, .Group12-tablet,
+ .Group122, .special-event-div{
+    display: none;
+}
+
+.white-background-flex{
+
+    display: grid;
+    grid-template-columns: 1fr; 
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: center;
+    position: relative;
+    left: 150px;
+}
+
+.family-gathering-mobile{
+    display: inline;
+    width: 400px;
+height: 500.949px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 0px 0px / 100% 100% no-repeat;
+}
+
+.FAMILY-p-tablet{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    position: relative;
+    left: 70px;
+    top: 50px;
+}
+
+.special-event1{
+    width: 326px;
+    color: #4C4C4C;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 17px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; 
+letter-spacing: 2.5px;
+position: relative; 
+right: 70px;
+}
+
+.special-event2 {
+    width: 326px;
+    color: #4C4C4C;
+    text-align: center;
+    font-family: 'League Spartan', sans-serif;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 2.5px;
+    position: relative;
+    right: 70px;
+}
+
+.FAMILY{
+    width: 327px;
+    color: #242B37;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px; 
+letter-spacing: -0.4px;
+position: relative;
+right: 60px;
+top: 80px;
+}
+
+
+.FAMILY-p {
+    width: 327px;
+    color: #242B37;
+text-align: center;
+font-family: 'League Spartan',sans-serif;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; 
+position: relative;
+right: 70px;
+top: 80px;
+
+}
+
+.FAMILY-div button{
+    width: 245px;
+    height: 64px;
+    flex-shrink: 0;
+    background: #111;
+    color: #FFF;
+font-family: 'League Spartan', sans-serif;
+font-size: 17px;
+font-style: normal;
+font-weight: 600;
+line-height: 16px; 
+letter-spacing: 2.5px;
+position: relative;
+top: 100px;
+right: 70px;
+padding-left: 0px;
+
+}
+
+.inner-footer-text{
+    background-image: url(./images/homepage/ready-bg-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
+    flex-direction: column;
+}
+
+.inner-footer-text-h1{
+    width: 500px;
+flex-shrink: 0;
+color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 40px; 
+letter-spacing: -0.4px;
+position: relative;
+left: 50px;
+}
+
+.inner-footer-text-button{
+    width: 245px;
+height: 64px;
+flex-shrink: 0;
+position: relative;
+bottom: 170px;
+left: 80px;
+
+}
+.footer-container{
+    bottom: 450px;
+    height: 100%;
+    margin-bottom: 800px;
+}
+
+.black{
+    height: 600px;
+    flex-direction: column;
+    gap: 0px;
+    margin: 0px;
+}
+
+.black-p1{
+    width: 327px;
+    color: #FFF;
+text-align: center;
+font-family: 'League Spartan', sans-serif;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; 
+letter-spacing: 2px;
+text-transform: uppercase;
+position: relative;
+left: 50px;
+}
+.black-p2{
+    width: 327px;
+height: 84px;
+flex-shrink: 0;
+color: #FFF;
+text-align: center;
+font-family: 'League Spartan';
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 28px; 
+letter-spacing: 2px;
+text-transform: uppercase;
+position: relative;
+bottom: 140px;
+left: 50px;
+
+}
+
+.black-svg svg{
+    width: 103.425px;
+height: 40px;
+flex-shrink: 0;
+position: relative;
+top: 80px;
+left: 150px;
+}
+
+.desktop-svg{
+    display: none;
+}
+
+.mobile-svg{
+    display: inline;
+}
+} 
