--- a/dine-restaurant-website/starter-code/style.css
+++ b/dine-restaurant-website/starter-code/style.css
@@ -1522,7 +1522,7 @@ bottom: 1650px;
     display: grid;
   justify-content: start;
 position: relative;
-right: 280px;
+right: 300px;
 top: 30px;
 gap: 100px;
 }
@@ -1556,6 +1556,7 @@ line-height: 24px;
 letter-spacing: -0.25px;
 position: relative;
 bottom: 60px;
+left: 30px;
 }
 
 .dish-p{
@@ -1569,6 +1570,7 @@ font-weight: 400;
 line-height: 26px;
 position: relative;
 bottom: 50px;
+left: 30px;
 }
 
 .straight-line{
