--- a/dine-restaurant-website/starter-code/style.css
+++ b/dine-restaurant-website/starter-code/style.css
@@ -1815,8 +1815,8 @@ button:hover {
   .hero-booking {
     background: url(./images/booking/hero-bg-mobile.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
+    background-size: contain;
+    width: 1680px;
     height: 1120px;
   }
 
