--- a/dine-restaurant-website/starter-code/style.css
+++ b/dine-restaurant-website/starter-code/style.css
@@ -697,6 +697,12 @@ input[value^="4"] {
   width: 30px;
 }
 
+input[value^="+"], input[value^='-']{
+    height: 44px;
+    flex-shrink: 0;
+    color: brown;
+}
+
 .Group12-booking {
   width: 160px;
   height: 76px;
@@ -1187,16 +1193,12 @@ button:hover {
 }
 /* started styling booklin */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  body {
-    width: 100%;
-    height: 600px;
-    margin: 0 auto;
-  }
-
+  
   .contanier-booking {
     width: 780px;
     flex-shrink: 0;
-    background: url(<path-to-image>), lightgray 0px 0px / 100% 100% no-repeat;
+    background:  lightgray 0px 0px / 100% 100% no-repeat;
+    overflow-x: hidden;
   }
 
   .hero-booking {
@@ -1805,11 +1807,11 @@ button:hover {
 
 @media only screen and (max-width: 767px) {
   .contanier-booking {
-    width: 700px;
-    min-height: 100vh;
+    width: 375px;
+height: 1574px;
     flex-shrink: 0;
-    position: absolute;
     overflow-x: hidden;
+    
   }
 
   .hero-booking {
@@ -1830,7 +1832,7 @@ button:hover {
     height: 32px;
     flex-shrink: 0;
     position: relative;
-    left: 290px;
+    left: 150px;
   }
 
   .reserve {
@@ -1838,24 +1840,26 @@ button:hover {
     color: #fff;
     text-align: center;
     font-family: "League Spartan", sans-serif;
-    font-size: 40px;
+    font-size: 32px;
     font-style: normal;
     font-weight: 300;
     line-height: 40px; /* 125% */
     letter-spacing: -0.4px;
-    left: 70px;
+    right: 70px;
     bottom: 50px;
   }
 
   .reserve-p {
-    width: 450px;
+    width: 327px;
     color: #fff;
     text-align: center;
     font-family: "League Spartan", sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+    position: relative;
+    right: 70px;
   }
 
   .mobile-button-only {
@@ -1876,12 +1880,12 @@ button:hover {
     letter-spacing: 2.5px;
     background: transparent;
     position: relative;
-    left: 100px;
+    right: 30px;
     top: 100px;
   }
 
   .form-container{
-    width: 400px;
+    width: 327px;
     height: 650px;
 flex-shrink: 0;
 background: #FFF;
@@ -1889,7 +1893,7 @@ box-shadow: 0px 75px 100px -50px rgba(56, 66, 85, 0.50);
 bottom: 50px;
 left: 0px;
 margin-top: 600px;
-margin-left: 150px;
+margin-left: 20px;
   }
 
   .name,
@@ -1900,6 +1904,7 @@ margin-left: 150px;
   border: none;
   border-bottom: 1px solid #5c6779;
   outline: none;
+  background: transparent;
 }
 
 .date,
