--- a/dine-restaurant-website/starter-code/style.css
+++ b/dine-restaurant-website/starter-code/style.css
@@ -4,10 +4,10 @@
   box-sizing: border-box;
 }
 
-.body {
-  min-height: 100vh;
-  max-width: 400px;
-  margin: 0 auto;
+body {
+   width: 100%; 
+   font-family: sans-serif;
+   font-size: 1em;
 }
 .contanier {
   height: 1440px;
@@ -18,6 +18,7 @@
 
 .homepage {
   display: inline-flex;
+  width: 100%;
   height: 100vh;
 }
 
@@ -826,8 +827,9 @@ button:hover {
   display: none;
 }
 
-/* media query */
+/* media query  tablet view*/
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    
   .contanier {
     width: 768px;
     height: 992px;
@@ -1303,6 +1305,7 @@ button:hover {
 
 @media only screen and (max-width: 767px) {
   body {
+    width: 100%;
   }
 
   .contanier {
